figuring out the basics

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>JavaScript and Firebase refresher</title>
 </head>
-<script src="script.js"></script>
+
 
 <body>
 
@@ -20,6 +20,7 @@
         <li>Get rid of the alert - the button updates the heading of this page</li>
     </ul>
     <h4>Firebase basics</h4>
+<button type="button">Click Me!</button>
 
     <ul>
         <li>Create a new Firebase or re-use yours from last year</li>
@@ -43,5 +44,5 @@
         You can Google it, ask a friend, copy from last year's work, even look at <a href="https://sites.google.com/hvhs.school.nz/technology/COMP/12COMP/12-databases/br-firebase-skills">last year's notes</a>, works for you.<br>
         By the end of the week you will have Firebase going.</p>
 </body>
-
+<script src="script.js"></script>
 </html>
