--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <title>JavaScript and Firebase refresher</title>
+    
+
 </head>
-<script src="script.js"></script>
+
 
 <body>
 
@@ -21,6 +23,9 @@
         <li>Get rid of the alert - the button updates the heading of this page</li>
     </ul>
     <h4>Firebase basics</h4>
+        <button onclick= "buttonchange()" >Click Me!</button>
+        <input id="headerInput" type = "text" placeholder="write down your name">
+        <button onclick = "changeheader()" > Click to change header</button>
 
     <ul>
         <li>Create a new Firebase or re-use yours from last year</li>
@@ -34,15 +39,17 @@
         <li>Change what the first button does. Now it saves the text and the user who entered it</li>
         <li>Change what the second button does. Now it displays all the messages and who added them</li>
     </ul>
-    <h4>Extension</h4>
+    <h4> Extension</h4>
     <ul>
         <li>Firebase now stores a list of messages saved by each user</li>
         <li>There is a button that only displays your messages</li>
         <li>You can filter to only display messages from a specific user</li>
     </ul>
+
     <p>You learned all this last year. You just need to remember how!<br>
         You can Google it, ask a friend, copy from last year's work, even look at <a href="https://sites.google.com/hvhs.school.nz/technology/COMP/12COMP/12-databases/br-firebase-skills">last year's notes</a>, works for you.<br>
         By the end of the week you will have Firebase going.</p>
-</body>
 
+    </body>
+    <script type="module" src="./script.mjs"></script>
 </html>
